--- a/README.org
+++ b/README.org
@@ -1,13 +1,12 @@
-# Dotconfig files
-Main desktop dotconfig files (flex for the lenovo flex 5 I have)
+* Dotconfig files
+Main desktop dotconfig files
 
-### Notes
-* (bare) Arch linux
-* Xanmod Kernel (compiled with _microarchitecture=37 use_numa=n use_tracers=n use_ns=y makepkg -sic)
+*** Notes
+- (bare) Arch linux
+- Xanmod Kernel (compiled with ~MAKEFLAGS='-j14' _microarchitecture=99 use_numa=n use_tracers=n use_ns=y makepkg -sic~)
 
 For other packages, just check pkglist for all installed with pacman explicitly (non-dependency)
 Or check apkglist for the "alternative package list", this is a file of things installed that do not exist within pacman (typically AUR, might every now and then include a package that was removed)
-
-## Credits
+** Credits
 https://www.atlassian.com/git/tutorials/dotfiles
 
